--- a/eval.tex
+++ b/eval.tex
@@ -25,7 +25,7 @@ Each server then sends the requested amount of data to the client and
 we measure the flow completion time of each such request.
 We use multiple server processes to emulate multiple machines behind the \name at the customer's edge.
 
-Each CDF shown in this section is comprised of $100,000$ requests sampled from this distribution, across $10$ runs each with a different random seed.
+Unless otherwise specified, each result in this section is comprised of $100,000$ requests sampled from this distribution, across $10$ runs each with a different random seed.
 In addition, there is a persistently backlogged connection inside the traffic aggregate that models a background large data transfer which would normally fill the bottleneck queue.
 %
 %\radhika{another title for this section, or some preceding explanation on what each section is about}
