--- a/impl.tex
+++ b/impl.tex
@@ -48,7 +48,7 @@ Our patches to the TBF qdisc comprise $112$ lines of C.
 \Para{\capinbox control plane} We implement it to run in user-space in $1167$ lines of Rust.
 We use CCP~\cite{ccp} to run different congestion control algorithms (described next). CCP is a platform for expressing congestion control algorithms in an asynchronous format, which makes it a natural choice for our epoch-based measurement architecture. The control plane uses \texttt{libccp}~\cite{ccp} to interface with the congestion control algorithm, and  \texttt{libnl} to communicate with the qdisc.
 
-\Para{Congestion control algorithms} We use existing implementations of congestion control algorithms on CCP~\cite{nimbus, copa, bbr} to compute sending rates at the \inbox, and leverage Nimbus' elasticity detection technique~\cite{nimbus} to detect persistent buffer-filling flows. Upon detection of buffer-filling flows, the \inbox  starts pushing traffic at an increased rate (set to the observed received rate plus an additive probe factor), such that its control over the bundled traffic is relinquished. This enables the congestion control algorithms at the unmodified endhosts to compete with the buffer-filling flow, as they would in the default case, without a \name. The additive probe factor is a function of Nimbus' pulse amplitude, and is set, in our implementation, to one-sixteenth of the maximum receive rate seen so far.
+\Para{Congestion control algorithms} We use existing implementations of congestion control algorithms on CCP~\cite{nimbus, copa, bbr} to compute sending rates at the \inbox, and leverage Nimbus' elasticity detection technique~\cite{nimbus} to detect persistent buffer-filling flows. Upon detection of buffer-filling flows, the \inbox  starts pushing traffic at an increased rate, set to the observed received rate plus an additive probe factor. The c, such that its control over the bundled traffic is relinquished. This enables the congestion control algorithms at the unmodified endhosts to compete with the buffer-filling flow, as they would in the default case, without a \name. The additive probe factor is a function of Nimbus' pulse amplitude, and is set, in our implementation, to one-sixteenth of the maximum receive rate seen so far.
 
 %It maintains the congestion control state of each bundle, but does not maintain (or observe) per-flow state.
 %\radhika{no. of LoC for \inbox dataplane?} \an{first paragraph of this section?}
