--- a/fifo-not-enough.tex
+++ b/fifo-not-enough.tex
@@ -5,7 +5,7 @@
 \includegraphics[width=\maxwidth]{figure/eval:fifo-1} 
 
 \end{knitrout}
-    \caption{With FIFO scheduling, the benefits of \name are lost: FCTs are 18\% worse in the median.}
+    \caption{With FIFO scheduling, the benefits of \name are lost: FCTs are 18\% worse in the median. Note the different y-axis scales for each group of request sizes.}
     \label{fig:eval:fifo}
 \end{figure}
 \newcommand{\overviewBenefitsFifoMedian}{1.96\xspace}
