--- a/graphs/fifo-not-enough.Rnw
+++ b/graphs/fifo-not-enough.Rnw
@@ -87,7 +87,7 @@ ggplot(big, aes(
 overview_benefits_bundler_results = quantile(df[df$Alg=="copa_sfq",]$Slowdown, c(0.5, 0.99))
 overview_benefits_fifo_results = quantile(df[df$Alg=="copa_fifo",]$Slowdown, c(0.5, 0.99))
 @
-    \caption{With FIFO scheduling, the benefits of \name are lost: FCTs are \Sexpr{round(100*(1-((overview_benefits_fifo_results[1] / overview_benefits_bundler_results[1])-1)), 0)}\% worse in the median.}
+    \caption{With FIFO scheduling, the benefits of \name are lost: FCTs are \Sexpr{round(100*(1-((overview_benefits_fifo_results[1] / overview_benefits_bundler_results[1])-1)), 0)}\% worse in the median. Note the different y-axis scales for each group of request sizes.}
     \label{fig:eval:fifo}
 \end{figure}
 \newcommand{\overviewBenefitsFifoMedian}{\Sexpr{round(overview_benefits_fifo_results[1], 2)}\xspace}
