--- a/overview-benefits.tex
+++ b/overview-benefits.tex
@@ -5,7 +5,7 @@
 \includegraphics[width=\maxwidth]{figure/eval:best-1} 
 
 \end{knitrout}
-    \caption{\name achieves 33\% lower median slowdown. Note the differing axis scales. For both \name and Optimal, performance benefits come from preventing short flows from queueing behind long ones.}
+    \caption{\name achieves 33\% lower median slowdown. The three graphs show FCT distributions for the indicated request sizes: smaller than 10KB, between 10KB and 1MB, and greater than 1MB.  Note the different y-axis scales for each group of request sizes. For both \name and Optimal, performance benefits come from preventing short flows from queueing behind long ones.}
     \label{fig:eval:best}
 \end{figure}
 \newcommand{\overviewBenefitsBaselineMedian}{1.62\xspace}
