--- a/proxy.tex
+++ b/proxy.tex
@@ -5,6 +5,6 @@
 \includegraphics[width=\maxwidth]{figure/eval:proxy-1} 
 
 \end{knitrout}
-    \caption{A proxy-based implementation of \name could yield further benefits to the long flows.}
+    \caption{A proxy-based implementation of \name could yield further benefits to the long flows. Note the different y-axis scales for each group of request sizes.}
     \label{fig:eval:proxy}
 \end{figure}
