--- a/congestion-control.tex
+++ b/congestion-control.tex
@@ -5,6 +5,10 @@
 \includegraphics[width=\maxwidth]{figure/eval:cc-1} 
 
 \end{knitrout}
-    \caption{Choosing a congestion control algorithm at \name remains important, just as it is at the end-host.}
+    \caption{Choosing a congestion control algorithm at \name remains important, just as it is at the end-host. Note the different y-axis scales for each group of request sizes.}
     \label{fig:eval:cc}
 \end{figure}
+\newcommand{\ccCopaMedian}{}
+\newcommand{\ccNimbusMedian}{}
+\newcommand{\ccBBRMedian}{}
+\newcommand{\ccBaselineMedian}{}
