numbers in self-inflicted delays

--- a/congestion-control.tex
+++ b/congestion-control.tex
@@ -8,7 +8,7 @@
     \caption{Choosing a congestion control algorithm at \name remains important, just as it is at the end-host. Note the different y-axis scales for each group of request sizes.}
     \label{fig:eval:cc}
 \end{figure}
-\newcommand{\ccCopaMedian}{}
-\newcommand{\ccNimbusMedian}{}
-\newcommand{\ccBBRMedian}{}
-\newcommand{\ccBaselineMedian}{}
+\newcommand{\ccCopaMedian}{1.08\xspace}
+\newcommand{\ccNimbusMedian}{1.18\xspace}
+\newcommand{\ccBBRMedian}{1.16\xspace}
+\newcommand{\ccBaselineMedian}{1.62\xspace}
