--- a/graphs/fifo-not-enough.Rnw
+++ b/graphs/fifo-not-enough.Rnw
@@ -43,7 +43,7 @@ ggplot(med, aes(
     )) +
     geom_boxplot(show.legend=FALSE,outlier.shape=NA) +
     ylab(NULL) +
-    ggtitle("> 10KB") +
+    ggtitle("10KB - 1MB") +
     scale_fill_brewer(type="qual", palette=1) +
     scale_x_discrete(
         limit=c("copa_sfq", "copa_fifo"),
