--- a/graphs/overview-benefits.Rnw
+++ b/graphs/overview-benefits.Rnw
@@ -46,7 +46,7 @@ ggplot(med, aes(
     )) +
     geom_boxplot(show.legend=FALSE,outlier.shape=NA) +
     ylab(NULL) +
-    ggtitle("> 10KB") +
+    ggtitle("10KB - 1MB") +
     scale_fill_brewer(type="qual", palette=2) +
     scale_x_discrete(
         limit=c("nobundler_fifo", "copa_sfq", "nobundler_sfq"),
