--- a/graphs/proxy.Rnw
+++ b/graphs/proxy.Rnw
@@ -45,7 +45,7 @@ ggplot(med, aes(
     )) +
     geom_boxplot(show.legend=FALSE,outlier.shape=NA) +
     ylab(NULL) +
-    ggtitle("> 10KB") +
+    ggtitle("10KB - 1MB") +
     scale_fill_brewer(type="qual", palette=2) +
     scale_x_discrete(
         limit=c("proxy_copa_sfq", "copa_sfq"),
