update micro bencrhmak plots

--- a/measure.tex
+++ b/measure.tex
@@ -250,9 +250,8 @@ When the \inbox updates the epoch size $N$ for a bundle, it needs to send an out
 
 \subsection{Microbenchmarks}
 \label{s:measure:microbench}
-    \input{micro-time}
-    \input{micro-thru-dist}
-    \input{micro-delay-dist}
+    \input{micro-time-thru}
+    \input{micro-time-delay}
     We now explore how well our measurements match the actual network conditions. 
 
     %First, we consider our estimate of the receive rate (Equation 1c). 
