--- a/deployment.tex
+++ b/deployment.tex
@@ -34,7 +34,7 @@ Customers already have control over queues that are built within their own domai
 So the next question that arises is, does such in-network congestion occur in practice? A recent measurement study~\cite{inferring-interdomain-congestion} indicates that inter-domain links in the network (depicted in red in Figure~\ref{fig:deploy:arch}) can indeed experience significant congestion. We briefly discuss how the source of this congestion influences \name's benefits (and provide detailed results in \S\ref{s:eval}).
 %However, the benefits provided by \name would vary across different sources of this congestion. , as discussed below:
 
-\paragraphi{Self-inflicted congestion} This occurs when traffic from a single bundle causes a queue to build up at the bottleneck links in the network, even without any other cross-traffic. It can happen when a small carrier network does not have enough capacity to sustain the large volume of traffic sent by a content provider to a receiving domain, or due to explicit rate limiting commonly done by ISPs~\cite{isp-throttle-1, isp-throttle-2, isp-throttle-3}.  In such cases, \name can result in significant improvements in performance, as it would then have control over the entire queue. 
+\paragraphi{Self-inflicted congestion} This occurs when traffic from a single bundle causes a queue to build up at the bottleneck links in the network, even without any other cross-traffic. It can happen when a small carrier network does not have enough capacity to sustain the large volume of traffic sent by a content provider to a receiving domain, or due to explicit rate limiting commonly done by ISPs~\cite{isp-throttle-1, isp-throttle-2, isp-throttle-3}.  In such cases, \name can result in significant improvements in performance, as it would then have control over the \reword{entire queue}. 
 %In our example scenario, \egsender can use \name to prioritize its interactive messaging traffic and avoid the delay due to large self-inflicted queues created by multiple downloads from the storage service. 
 %the self-inflicted queue due to a large file transfer from \egsender's storage service, can significantly increase in the delay seen by overlapping interactive messaging traffic. 
 %these messages, and get significantly improved performance. 
