--- a/ref.bib
+++ b/ref.bib
@@ -834,7 +834,21 @@ year = {2013},
  title = {{Debugging the Data Plane with Anteater}},
  booktitle = {SIGCOMM},
  year = {2011},
+}
+
+@inproceedings{ron,
+ author = {Andersen, David and Balakrishnan, Hari and Kaashoek, Frans and Morris, Robert},
+ title = {{Resilient Overlay Networks}},
+ booktitle = {SOSP},
+ year = {2001},
 } 
+
+@inproceedings {overqos,
+author = {Lakshminarayanan Subramanian and Ion Stoica and Hari Balakrishnan and Randy Katz},
+title = {{OverQoS: An Overlay Based Architecture for Enhancing Internet QoS}},
+booktitle = {NSDI},
+year = {2004},
+}
 
 @inproceedings {veriflow,
 author = {Ahmed Khurshid and Xuan Zou and Wenxuan Zhou and Matthew Caesar and P. Brighten Godfrey},
