--- a/related.tex
+++ b/related.tex
@@ -10,7 +10,10 @@ However, it also requires new router hardware. \name, with its more tractable go
 
 \Para{Aggregating congestion information} A recent proposal~\cite{fivecomps} observes that the majority of today's traffic is owned by a few entities.
 %, and that a single entity might have a large number of flows traversing the same bottleneck link. 
-This observation implies that we can expect to have a small number of bundles across the Internet, each with large amounts of traffic, resulting in greater scheduling opportunities within a bundle. Note that the proposal uses its observation to highlight the benefits of sharing information across a given customer's traffic when configuring congestion control algorithms at the endhosts. This is orthogonal to our goal of doing effective scheduling across such traffic by introducing a new middlebox as a choke-point, without touching individual endhosts. 
+This observation implies that we can expect to have a small number of bundles across the Internet, each with large amounts of traffic, resulting in greater scheduling opportunities within a bundle. Note that the proposal uses its observation to highlight the benefits of sharing information across a given customer's traffic when configuring congestion control algorithms at the endhosts. This is orthogonal to our goal of doing effective scheduling across such traffic by introducing a new middlebox as a choke-point, without touching individual endhosts.
+
+\Para{Overlays} OverQoS~\cite{overqos} proposed an extension to overlay-based network architectures~\cite{ron} to deploy QoS independently of endhosts, a mechanism for packet scheduling.
+OverQoS uses loss-based congestion control and therefore cannot shift queues; our approach is complementary.
 
 \Para{Split TCP Proxy} This middlebox splits the TCP connections traversing it, such that the senders observe a smaller round-trip time and can increase their sending rate faster. Since it terminates and re-establishes TCP connections, it requires implementing a full TCP stack, managing per-connection state and intrusively changing the packet headers. Again, \name has orthogonal (yet, complementary) goals, which allow for a light-weight implementation, without requiring any per-connection state (unless needed for a specific scheduling algorithm) or any modifications to the packets traversing it. We show how combining \name's features with a TCP Proxy could lead to further improvements in performance in \S\ref{s:eval:proxy}. 
 
