--- a/impl.tex
+++ b/impl.tex
@@ -51,7 +51,7 @@ We use CCP~\cite{ccp} to run different congestion control algorithms (described 
 \Para{Congestion control algorithms} We use existing implementations of congestion control algorithms on CCP~\cite{nimbus, copa, bbr} to compute sending rates at the \inbox. If the algorithm uses a congestion window, the \inbox computes $\text{\emph{effective rate}} = \frac{\text{CWND}}{\text{RTT}}$ and sets the rate of the qdisc to be the minimum of the explicit rate and this effective rate.
 %Upon receiving new RTT samples, the \inbox updates the effective rate, and updates the qdisc rate if appropriate.
 
-The \inbox also leverages Nimbus' elasticity detection technique~\cite{nimbus} to detect persistent buffer-filling flows. When such flows are detected, the \inbox  starts pushing traffic at an increased rate, set to the observed received rate plus an additive probe factor. This probing ensures that the sending rate set by \inbox eventually exceeds the offered load, thus enabling it to relinquish its control over the bundled traffic. This, in turn, allows the congestion control algorithms at the unmodified endhosts to compete with the buffer-filling flow, as they would in the default case, without a \name. The additive probe factor is a function of Nimbus' pulse amplitude, and is set, in our implementation, to one-sixteenth of the maximum receive rate seen so far. 
+The \inbox also leverages a recently proposed technique~\cite{nimbus} to detect persistent buffer-filling flows. The basic idea is to use short-timescale pulses to create traffic fluctuations at the bottleneck link, and measure if the cross traffic changes its rate in response to these fluctuations; if it does, it indicates the presence of long-running TCP flows that react to bandwidth variations. When such flows are detected, the \inbox  starts pushing traffic at an increased rate, set to the observed received rate plus a probe factor. Sending faster than the receive rate ensures that the rate of the \inbox eventually exceeds the offered load, thus draining any queue at the \inbox. This, in turn, allows the congestion control algorithms at the unmodified endhosts to compete with the buffer-filling flow, as they would without a \name. The additive probe factor is set in our implementation to one-sixteenth of the maximum receive rate seen so far. 
 
 %It maintains the congestion control state of each bundle, but does not maintain (or observe) per-flow state.
 %\radhika{no. of LoC for \inbox dataplane?} \an{first paragraph of this section?}
