--- a/micro-time-thru.tex
+++ b/micro-time-thru.tex
@@ -7,9 +7,54 @@
 \end{knitrout}
 
 \begin{knitrout}
-\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
-\includegraphics[width=\maxwidth]{figure/micro:dist-thru-1} 
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
 
+
+{\ttfamily\noindent\color{warningcolor}{\#\# Warning in file(file, "{}rt"{}): cannot open file 'minrtt-delay-dist.out': No such file or directory}}
+
+{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error in file(file, "{}rt"{}): cannot open the connection}}
+
+{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error in `colnames<-`(`*tmp*`, value = c("{}t"{}, "{}mm\_delay"{}, "{}inbox\_delay"{}, : attempt to set 'colnames' on an object with less than two dimensions}}
+
+{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error in data\$diff\_thru: object of type 'closure' is not subsettable}}
+
+{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error in data\$diff\_thru: object of type 'closure' is not subsettable}}
+
+{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error in data.frame(x = dens\_thru\$x, y = dens\_thru\$y): object 'dens\_thru' not found}}
+
+{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error in data\$diff\_thru: object of type 'closure' is not subsettable}}
+
+{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error in is.unsorted(vec): object 'quants\_thru' not found}}
+
+{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error in which(df\_thru\$quant == 1): object 'df\_thru' not found}}
+
+{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error in eval(expr, envir, enclos): object 'df\_thru' not found}}
+
+{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error in eval(expr, envir, enclos): object 'df\_thru' not found}}
+
+{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error in eval(expr, envir, enclos): object 'quants\_thru' not found}}
+
+{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error in rbind(df\_thru, c(quants\_thru[["{}10\%"{}]] - 1e-04, med, 0)): object 'df\_thru' not found}}
+
+{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error in rbind(df\_thru, c(quants\_thru[["{}10\%"{}]] + 1e-04, med, 1)): object 'df\_thru' not found}}
+
+{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error in which(df\_thru\$quant == 2): object 'df\_thru' not found}}
+
+{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error in eval(expr, envir, enclos): object 'df\_thru' not found}}
+
+{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error in eval(expr, envir, enclos): object 'df\_thru' not found}}
+
+{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error in eval(expr, envir, enclos): object 'quants\_thru' not found}}
+
+{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error in rbind(df\_thru, c(quants\_thru[["{}90\%"{}]] - 1e-04, med, 1)): object 'df\_thru' not found}}
+
+{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error in rbind(df\_thru, c(quants\_thru[["{}90\%"{}]] + 1e-04, med, 2)): object 'df\_thru' not found}}
+
+{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error in data\$diff\_thru: object of type 'closure' is not subsettable}}
+
+{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error in ggplot(df\_thru, aes(x, y)): object 'df\_thru' not found}}
+
+{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error in eval(expr, envir, enclos): object 'p\_thru' not found}}\end{kframe}
 \end{knitrout}
 
     \caption{\name's estimate of the receive rate.}
